CSS bug on mobile, more legible logo.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -264,6 +264,11 @@ aside {
 #sponsor {
 	clear: both;
 }
+#sponsor h3 {
+	border-bottom: 1px solid rgba(0,0,0,.5);
+	padding: 0 0 10px 0;
+	margin: 0 0 20px 0;
+}
 #sponsor p {
 	font-size: 1.2em;
 	margin-bottom: 10px;
